--- a/index.html
+++ b/index.html
@@ -189,9 +189,10 @@
         <!-- ======= Skills Section ======= -->
         <!-- pour ajouter, supprimer ou modifier un skills ici, vous devez le faire aussi dans le fichier _skills.scss et le fichier main.js partie skills -->
         <section class="section" id="skills">
-            <div class="container">
-                <div class="h4 text-center mb-4 title mt-4">Professional Skills</div>
-                <div class="flexrow justify-content-center card container-skills" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+
+            <div class="h4 text-center mb-4 title mt-4">Professional Skills</div>
+            <div class="container card ">
+                <div class="flexrow justify-content-center  container-skills" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                     <ul class="skills-bar-container col-lg-6 col-md-6 col-sm-12">
                         <li class=" col-12">
                             <div class="progressbar-title">
@@ -288,6 +289,7 @@
                     </ul>
                 </div>
             </div>
+
 
         </section>
         <!-- End Skills Section -->
@@ -421,14 +423,15 @@
 
         <!-- ======= experiences Section ======= -->
         <section class=" section" id="experiences">
-            <div class="container">
-                <div class="h4 text-center mb-4 title mt-4 ">Work Experience</div>
+
+            <div class="h4 text-center mb-4 title mt-4 ">Work Experience</div>
+            <div class="container ">
                 <div class="card">
                     <div class="row">
-                        <div class=" cardbg col-lg-3 col-md-3 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-                            <div class="card-body align-middle text-light">
-                                <p class="text-light"> March 2016 - Present</p>
-                                <div class="h5">CreativeM</div>
+                        <div class="d-flex align-items-center cardbg col-lg-3 col-md-3 col-sm-12 " data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                            <div class=" card-body text-light align-middle ">
+                                <p class="text-light text-center align">March 2016 - Present</p>
+                                <div class="h5 text-center">CreativeM</div>
                             </div>
                         </div>
                         <div class="col-lg-9 col-md-9 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
@@ -442,10 +445,10 @@
                 </div>
                 <div class="card">
                     <div class="row">
-                        <div class=" cardbg col-lg-3 col-md-3 col-sm-12 " data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-                            <div class="card-body text-light">
-                                <p class="text-light">April 2014 - March 2016</p>
-                                <div class="h5">WebNote</div>
+                        <div class="d-flex align-items-center cardbg  col-lg-3 col-md-3 col-sm-12 " data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                            <div class="cardbg card-body text-light">
+                                <p class="text-light text-center">April 2014 - March 2016</p>
+                                <div class="h5 text-center">WebNote</div>
                             </div>
                         </div>
                         <div class="col-lg-9 col-md-9 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
@@ -459,10 +462,10 @@
                 </div>
                 <div class="card">
                     <div class="row">
-                        <div class="cardbg col-lg-3 col-md-3 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-                            <div class="card-body text-light">
-                                <p class="text-light">April 2013 - February 2014</p>
-                                <div class="h5">WEBM</div>
+                        <div class="d-flex align-items-center cardbg col-lg-3 col-md-3 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                            <div class="cardbg card-body text-light ">
+                                <p class="text-light text-center">April 2013 - February 2014</p>
+                                <div class="h5 text-center">WEBM</div>
                             </div>
                         </div>
                         <div class="col-lg-9 col-md-9 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
@@ -475,18 +478,19 @@
                     </div>
                 </div>
             </div>
+
         </section>
         <!-- End experiences Section -->
 
         <!-- ======= Testimonials Section ======= -->
         <section class=" section testimonials section-bg" id="testimonials">
-            <div class="container mb-5">
-                <div class="text-center mb-3" data-aos="fade-in" data-aos-delay="100">
-                    <div class="h4 text-center mb-4 title mt-4 ">Testimonials</div>
+            <div class="h4 text-center mb-4 title mt-4 ">Testimonials</div>
+            <div class="container card mb-5">
+                <div class="text-center mt-3" data-aos="fade-in" data-aos-delay="100">
                     <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi
                         quidem hic quas.</p>
                 </div>
-                <div class="mt-5 owl-carousel owl-theme testimonials-carousel">
+                <div class="mb-3 mt-3 owl-carousel owl-theme testimonials-carousel">
                     <div class="testimonial-item" data-aos="fade-up">
                         <img src="public/images/testimonials/testimonials-1.webp" class="testimonial-img" alt="">
                         <h3>Saul Goodman</h3>
