--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Vendor CSS Files -->
     <link href="public/vendors/bootstrap/bootstrap.min.css" rel="stylesheet">
-    <link href="public/vendors/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="public/vendors/owl.carousel/owl.carousel.min.css" rel="stylesheet">
     <link href="public/vendors/aos/aos.css" rel="stylesheet">
     <link href="public/vendors/lightbox/lightbox.min.css" rel="stylesheet" />
 
@@ -426,32 +426,33 @@
 
             <div class="h4 text-center mb-4 title mt-4 ">Work Experience</div>
             <div class="container ">
-                <div class="card">
+                <div class=" mb-2">
                     <div class="row">
-                        <div class="d-flex align-items-center cardbg col-lg-3 col-md-3 col-sm-12 " data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                        <div class="exper d-flex align-items-center cardbg col-lg-3 col-md-3 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                             <div class=" card-body text-light align-middle ">
                                 <p class="text-light text-center align">March 2016 - Present</p>
                                 <div class="h5 text-center">CreativeM</div>
                             </div>
                         </div>
-                        <div class="col-lg-9 col-md-9 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                        <div class="card pl-3 col-lg-9 col-md-9 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                             <div class="card-body">
                                 <div class="h5">Front End Developer</div>
                                 <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia
-                                    sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+                                    sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.
+                                </p>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="card">
+                <div class=" mb-2">
                     <div class="row">
-                        <div class="d-flex align-items-center cardbg  col-lg-3 col-md-3 col-sm-12 " data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-                            <div class="cardbg card-body text-light">
-                                <p class="text-light text-center">April 2014 - March 2016</p>
+                        <div class="exper d-flex align-items-center cardbg col-lg-3 col-md-3 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                            <div class=" card-body text-light align-middle ">
+                                <p class="text-light text-center align">April 2014 - March 2016</p>
                                 <div class="h5 text-center">WebNote</div>
                             </div>
                         </div>
-                        <div class="col-lg-9 col-md-9 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                        <div class="card pl-3 col-lg-9 col-md-9 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                             <div class="card-body">
                                 <div class="h5">Web Developer</div>
                                 <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia
@@ -460,15 +461,16 @@
                         </div>
                     </div>
                 </div>
-                <div class="card">
+                <div class=" mb-2">
                     <div class="row">
-                        <div class="d-flex align-items-center cardbg col-lg-3 col-md-3 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-                            <div class="cardbg card-body text-light ">
-                                <p class="text-light text-center">April 2013 - February 2014</p>
+                        <div class="exper d-flex align-items-center cardbg col-lg-3 col-md-3 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                            <div class=" card-body text-light align-middle ">
+                                <p class="text-light text-center align">April 2013 - February 2014
+                                </p>
                                 <div class="h5 text-center">WEBM</div>
                             </div>
                         </div>
-                        <div class="col-lg-9 col-md-9 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                        <div class="card pl-3 col-lg-9 col-md-9 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                             <div class="card-body">
                                 <div class="h5">Intern</div>
                                 <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia
@@ -477,6 +479,7 @@
                         </div>
                     </div>
                 </div>
+
             </div>
 
         </section>
@@ -485,7 +488,7 @@
         <!-- ======= Testimonials Section ======= -->
         <section class=" section testimonials section-bg" id="testimonials">
             <div class="h4 text-center mb-4 title mt-4 ">Testimonials</div>
-            <div class="container card mb-5">
+            <div class="container card ">
                 <div class="text-center mt-3" data-aos="fade-in" data-aos-delay="100">
                     <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi
                         quidem hic quas.</p>
@@ -545,75 +548,72 @@
         <!-- End Testimonials Section -->
 
         <!-- ======= contact Section ======= -->
-        <section class="section" id="contact">
-            <div class="cc-contact-information" style="background-image: url('public/images/staticmap.png')">
-                <div class="container">
-                    <div class="cc-contact">
-                        <div id="contact" class="row">
-                            <div class="col-md-9">
-                                <div class="card mb-0" data-aos="zoom-in">
-                                    <div class="h4 text-center mb-4 title mt-4 ">Contact Me</div>
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <div class="card-body">
-                                                <form action="https://formspree.io/your@email.com" method="POST">
-                                                    <p class="h5 pb-3"><strong>Feel free to contact me </strong>
-                                                    </p>
-                                                    <div class="row mb-3">
-                                                        <div class="col">
-                                                            <div class="input-group"><span class="input-group-addon"><i
-                                                                        class="fa fa-user-circle"></i></span>
-                                                                <input class="form-control" type="text" name="name" placeholder="Name" required="required" />
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="row mb-3">
-                                                        <div class="col">
-                                                            <div class="input-group"><span class="input-group-addon"><i
-                                                                        class="fa fa-file-text"></i></span>
-                                                                <input class="form-control p" type="text" name="Subject" placeholder="Subject" required="required" />
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="row mb-3">
-                                                        <div class="col">
-                                                            <div class="input-group"><span class="input-group-addon"><i
-                                                                        class="fa fa-envelope"></i></span>
-                                                                <input class="form-control" type="email" name="_replyto" placeholder="E-mail" required="required" />
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="row mb-3">
-                                                        <div class="col">
-                                                            <div class="form-group">
-                                                                <textarea class="form-control" name="message" placeholder="Your Message" required="required"></textarea>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <div class="row">
-                                                        <div class="col">
-                                                            <button class="btn btn-primary" type="submit">Send</button>
-                                                        </div>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="card-body">
-                                                <p class="mb-0"><strong>Address </strong></p>
-                                                <p class="pb-2">140, City Center, New York, U.S.A</p>
-                                                <p class="mb-0"><strong>Phone</strong></p>
-                                                <p class="pb-2">+1718-111-0011</p>
-                                                <p class="mb-0"><strong>Email</strong></p>
-                                                <p>anthony@company.com</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+        <section class=" section contact section-bg" id="contact">
+            <div class="h4 text-center mb-4 title mt-4 ">Contact</div>
+            <div class="container card mb-5">
+                <div class="section-title mt-3" data-aos="fade-in" data-aos-delay="100">
+                    <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi
+                        quidem hic quas.</p>
+                </div>
+                <div class="row" data-aos="fade-up" data-aos-delay="100">
+                    <div class="col-lg-6">
+                        <div class="info-box mb-4">
+                            <i class="bx bx-map"></i>
+                            <h3>Our Address</h3>
+                            <p>A108 Adam Street, New York, NY 535022</p>
                         </div>
                     </div>
+
+                    <div class="col-lg-3 col-md-6">
+                        <div class="info-box  mb-4">
+                            <i class="bx bx-envelope"></i>
+                            <h3>Email Us</h3>
+                            <p>contact@example.com</p>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6">
+                        <div class="info-box  mb-4">
+                            <i class="bx bx-phone-call"></i>
+                            <h3>Call Us</h3>
+                            <p>+1 5589 55488 55</p>
+                        </div>
+                    </div>
+
                 </div>
+
+                <div class="row" data-aos="fade-up" data-aos-delay="200">
+
+                    <div class="col-lg-6 ">
+                        <iframe class="mb-4 mb-lg-0" src="https://maps.google.com/maps?q=%20%20casablanca&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
+                    </div>
+
+                    <div class="col-lg-6">
+                        <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                            <div class="form-row">
+                                <div class="col-md-6 form-group">
+                                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                                    <div class="validate"></div>
+                                </div>
+                                <div class="col-md-6 form-group">
+                                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                                    <div class="validate"></div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                                <div class="validate"></div>
+                            </div>
+                            <div class="form-group">
+                                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
+                                <div class="validate"></div>
+                            </div>
+                            <div class="text-center"><button type="submit">Send Message</button></div>
+                        </form>
+                    </div>
+
+                </div>
+
             </div>
         </section>
         <!-- End contact Section -->
