--- a/index.html
+++ b/index.html
@@ -426,9 +426,9 @@
 
             <div class="h4 text-center mb-4 title mt-4 ">Work Experience</div>
             <div class="container ">
-                <div class=" mb-2">
+                <div class=" mb-4 exper">
                     <div class="row">
-                        <div class="exper d-flex align-items-center cardbg col-lg-3 col-md-3 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                        <div class=" d-flex align-items-center cardbg col-lg-3 col-md-3 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                             <div class=" card-body text-light align-middle ">
                                 <p class="text-light text-center align">March 2016 - Present</p>
                                 <div class="h5 text-center">CreativeM</div>
@@ -444,7 +444,7 @@
                         </div>
                     </div>
                 </div>
-                <div class=" mb-2">
+                <div class=" mb-4 exper">
                     <div class="row">
                         <div class="exper d-flex align-items-center cardbg col-lg-3 col-md-3 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                             <div class=" card-body text-light align-middle ">
@@ -461,7 +461,7 @@
                         </div>
                     </div>
                 </div>
-                <div class=" mb-2">
+                <div class=" mb-4 exper">
                     <div class="row">
                         <div class="exper d-flex align-items-center cardbg col-lg-3 col-md-3 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                             <div class=" card-body text-light align-middle ">
