--- a/index.html
+++ b/index.html
@@ -423,7 +423,6 @@
 
         <!-- ======= experiences Section ======= -->
         <section class=" section" id="experiences">
-
             <div class="h4 text-center mb-4 title mt-4 ">Work Experience</div>
             <div class="container ">
                 <div class=" mb-4 exper">
@@ -446,7 +445,7 @@
                 </div>
                 <div class=" mb-4 exper">
                     <div class="row">
-                        <div class="exper d-flex align-items-center cardbg col-lg-3 col-md-3 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                        <div class=" d-flex align-items-center cardbg col-lg-3 col-md-3 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                             <div class=" card-body text-light align-middle ">
                                 <p class="text-light text-center align">April 2014 - March 2016</p>
                                 <div class="h5 text-center">WebNote</div>
@@ -463,7 +462,7 @@
                 </div>
                 <div class=" mb-4 exper">
                     <div class="row">
-                        <div class="exper d-flex align-items-center cardbg col-lg-3 col-md-3 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                        <div class=" d-flex align-items-center cardbg col-lg-3 col-md-3 col-sm-12" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                             <div class=" card-body text-light align-middle ">
                                 <p class="text-light text-center align">April 2013 - February 2014
                                 </p>
