--- a/index.html
+++ b/index.html
@@ -548,34 +548,35 @@
 
         <!-- ======= contact Section ======= -->
         <section class=" section contact section-bg" id="contact">
-            <div class="h4 text-center mb-4 title mt-4 ">Contact</div>
+            <div class="h4 text-center mb-4 title mt-4 ">Let's Get In Touch
+            </div>
             <div class="container card mb-5">
                 <div class="section-title mt-3" data-aos="fade-in" data-aos-delay="100">
-                    <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi
-                        quidem hic quas.</p>
+                    <p>Convinced to start an interview with us? Send us a message and we'll get back to you as soon as possible!
+                    </p>
                 </div>
                 <div class="row" data-aos="fade-up" data-aos-delay="100">
                     <div class="col-lg-6">
                         <div class="info-box mb-4">
                             <i class="bx bx-map"></i>
-                            <h3>Our Address</h3>
-                            <p>A108 Adam Street, New York, NY 535022</p>
+                            <h5>Our Address</h5>
+                            <p>45, Boulevard Hassan II casablanca</p>
                         </div>
                     </div>
 
                     <div class="col-lg-3 col-md-6">
                         <div class="info-box  mb-4">
                             <i class="bx bx-envelope"></i>
-                            <h3>Email Us</h3>
-                            <p>contact@example.com</p>
+                            <h5>Email Us</h5>
+                            <p>Obayid@company.com</p>
                         </div>
                     </div>
 
                     <div class="col-lg-3 col-md-6">
                         <div class="info-box  mb-4">
                             <i class="bx bx-phone-call"></i>
-                            <h3>Call Us</h3>
-                            <p>+1 5589 55488 55</p>
+                            <h5>Call us</h5>
+                            <p>+ 212 555 511 111</p>
                         </div>
                     </div>
 
@@ -584,31 +585,29 @@
                 <div class="row" data-aos="fade-up" data-aos-delay="200">
 
                     <div class="col-lg-6 ">
-                        <iframe class="mb-4 mb-lg-0" src="https://maps.google.com/maps?q=%20%20casablanca&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
+                        <iframe class="mb-4 mb-lg-0" src="https://maps.google.com/maps?q=45,%20Boulevard%20Hassan%20II%20casablanca&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
                     </div>
 
                     <div class="col-lg-6">
-                        <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-                            <div class="form-row">
-                                <div class="col-md-6 form-group">
-                                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                                    <div class="validate"></div>
+                        <div class="container px-5 my-5">
+                            <form name="contact" action="public/php/mail.php" method="post">
+                                <div class="form-row">
+                                    <div class="col-md-6 form-group">
+                                        <input type="text" name="name" class="form-control name" id="name" placeholder="Your Name" />
+                                    </div>
+                                    <div class="col-md-6 form-group">
+                                        <input type="email" class="form-control email" name="email" id="email" placeholder="Your Email" />
+                                    </div>
                                 </div>
-                                <div class="col-md-6 form-group">
-                                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                                    <div class="validate"></div>
+                                <div class="form-group">
+                                    <input type="text" class="form-control subject" name="subject" id="subject" placeholder="Subject" />
                                 </div>
-                            </div>
-                            <div class="form-group">
-                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                                <div class="validate"></div>
-                            </div>
-                            <div class="form-group">
-                                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-                                <div class="validate"></div>
-                            </div>
-                            <div class="text-center"><button type="submit">Send Message</button></div>
-                        </form>
+                                <div class="form-group">
+                                    <textarea class="form-control message" name="message" id="message" rows="5"></textarea>
+                                </div>
+                                <div class="text-center"><button type="submit">Send Message</button></div>
+                            </form>
+                        </div>
                     </div>
 
                 </div>
@@ -653,15 +652,18 @@
 
     <!-- All script -->
     <script src="public/vendors/jquery/jquery.min.js"></script>
-    <script src="public/vendors/bootstrap/bootstrap.bundle.min.js"></script>
-    <script src="public/vendors/bootstrap/bootstrap.min.js"></script>
+    <script src="public/vendors/jquery/jquery.validate.min.js"></script>
     <script src="public/vendors/jquery/jquery.easing.min.js"></script>
+
+    <script src="public/vendors/bootstrap/bootstrap.bundle.min.js"></script>
+    <!-- <script src="public/vendors/bootstrap/bootstrap.min.js"></script> -->
+
     <!-- à supprimer en cas de non inutilité -->
-    <script src="public/vendors/waypoints/jquery.waypoints.min.js"></script>
+    <script src="public/vendors/jquery/jquery.waypoints.min.js"></script>
     <script src="public/vendors/aos/aos-2.3.1.js"></script>
     <script src="public/vendors/owl.carousel/owl.carousel.min.js"></script>
     <script src="public/vendors/lightbox/lightbox.min.js"></script>
-    <!-- <script src="public/vendors/venobox/venobox.min.js"></script> -->
+
 
     <script src="public/js/main.js"></script>
 
