--- a/index.html
+++ b/index.html
@@ -312,37 +312,30 @@
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 app">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/1.webp" title="Project Name">
                             <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/1.webp" alt="..." /> </a>
-
-
-                        <div class="cap row justify-content-between">
+                        <div class="cap row justify-content-between ">
                             <p class="ml-3 text-light ">projet-name</p>
-                            <a href="#">
-                                <p class="mr-3 "><i class="fas fa-link"></i>
-                                    </i>
-                                </p>
+                            <a class="mr-3" href="#">
+                                <i class="fas fa-link"></i>
                             </a>
                         </div>
-
-
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 design">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/2.webp" title="Project Name">
                             <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/2.webp" alt="..." /> </a>
                         <div class="cap row justify-content-between">
                             <p class="ml-3 text-light">projet-name</p>
-                            <a href="#">
-                                <p class="mr-3"><i class="fas fa-link"></i></p>
+                            <a class="mr-3" href="#">
+                                <i class="fas fa-link"></i>
                             </a>
                         </div>
-
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12 filter p-0 web">
                         <a class="portfolio-box" href="public/images/portfolio/fullsize/3.webp" title="Project Name">
                             <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/3.webp" alt="..." /> </a>
                         <div class="cap row justify-content-between">
                             <p class="ml-3 text-light">projet-name</p>
-                            <a href="#">
-                                <p class="mr-3"><i class="fas fa-link"></i></p>
+                            <a class="mr-3" href="#">
+                                <i class="fas fa-link"></i>
                             </a>
                         </div>
 
@@ -352,8 +345,8 @@
                             <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/4.webp" alt="..." /> </a>
                         <div class="cap row justify-content-between">
                             <p class="ml-3 text-light">projet-name</p>
-                            <a href="#">
-                                <p class="mr-3"><i class="fas fa-link"></i></p>
+                            <a class="mr-3" href="#">
+                                <i class="fas fa-link"></i>
                             </a>
                         </div>
 
@@ -363,8 +356,8 @@
                             <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/5.webp" alt="..." /> </a>
                         <div class="cap row justify-content-between">
                             <p class="ml-3 text-light">projet-name</p>
-                            <a href="#">
-                                <p class="mr-3"><i class="fas fa-link"></i></p>
+                            <a class="mr-3" href="#">
+                                <i class="fas fa-link"></i>
                             </a>
                         </div>
 
@@ -374,8 +367,8 @@
                             <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/6.webp" alt="..." /> </a>
                         <div class="cap row justify-content-between">
                             <p class="ml-3 text-light">projet-name</p>
-                            <a href="#">
-                                <p class="mr-3"><i class="fas fa-link"></i></p>
+                            <a class="mr-3" href="#">
+                                <i class="fas fa-link"></i>
                             </a>
                         </div>
 
@@ -385,8 +378,8 @@
                             <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/7.webp" alt="..." /> </a>
                         <div class="cap row justify-content-between">
                             <p class="ml-3 text-light">projet-name</p>
-                            <a href="#">
-                                <p class="mr-3"><i class="fas fa-link"></i></p>
+                            <a class="mr-3" href="#">
+                                <i class="fas fa-link"></i>
                             </a>
                         </div>
 
@@ -396,8 +389,8 @@
                             <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/8.webp" alt="..." /> </a>
                         <div class="cap row justify-content-between">
                             <p class="ml-3 text-light">projet-name</p>
-                            <a href="#">
-                                <p class="mr-3"><i class="fas fa-link"></i></p>
+                            <a class="mr-3" href="#">
+                                <i class="fas fa-link"></i>
                             </a>
                         </div>
 
@@ -407,8 +400,8 @@
                             <img class="img-fluid imgzoom" src="public/images/portfolio/thumbnails/9.webp" alt="..." /> </a>
                         <div class="cap row justify-content-between">
                             <p class="ml-3 text-light">projet-name</p>
-                            <a href="#">
-                                <p class="mr-3"><i class="fas fa-link"></i></p>
+                            <a class="mr-3" href="#">
+                                <i class="fas fa-link"></i>
                             </a>
                         </div>
 
@@ -551,15 +544,17 @@
             <div class="h4 text-center mb-4 title mt-4 ">Let's Get In Touch
             </div>
             <div class="container card mb-5">
+
                 <div class="section-title mt-3" data-aos="fade-in" data-aos-delay="100">
                     <p>Convinced to start an interview with us? Send us a message and we'll get back to you as soon as possible!
                     </p>
                 </div>
+
                 <div class="row" data-aos="fade-up" data-aos-delay="100">
                     <div class="col-lg-6">
                         <div class="info-box mb-4">
                             <i class="bx bx-map"></i>
-                            <h5>Our Address</h5>
+                            <h3>Our Address</h3>
                             <p>45, Boulevard Hassan II casablanca</p>
                         </div>
                     </div>
@@ -567,7 +562,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="info-box  mb-4">
                             <i class="bx bx-envelope"></i>
-                            <h5>Email Us</h5>
+                            <h3>Email Us</h3>
                             <p>Obayid@company.com</p>
                         </div>
                     </div>
@@ -575,8 +570,8 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="info-box  mb-4">
                             <i class="bx bx-phone-call"></i>
-                            <h5>Call us</h5>
-                            <p>+ 212 555 511 111</p>
+                            <h3>Call Us</h3>
+                            <p>+212 555 511 111</p>
                         </div>
                     </div>
 
@@ -589,25 +584,23 @@
                     </div>
 
                     <div class="col-lg-6">
-                        <div class="container px-5 my-5">
-                            <form name="contact" action="public/php/mail.php" method="post">
-                                <div class="form-row">
-                                    <div class="col-md-6 form-group">
-                                        <input type="text" name="name" class="form-control name" id="name" placeholder="Your Name" />
-                                    </div>
-                                    <div class="col-md-6 form-group">
-                                        <input type="email" class="form-control email" name="email" id="email" placeholder="Your Email" />
-                                    </div>
+                        <form action="public/php/mail.php" method="post" role="form">
+                            <div class="form-row">
+                                <div class="col-md-6 form-group">
+                                    <input type="text" name="name" class="form-control name" id="name" placeholder="Your Name" />
                                 </div>
-                                <div class="form-group">
-                                    <input type="text" class="form-control subject" name="subject" id="subject" placeholder="Subject" />
+                                <div class="col-md-6 form-group">
+                                    <input type="email" class="form-control email" name="email" id="email" placeholder="Your Email" />
                                 </div>
-                                <div class="form-group">
-                                    <textarea class="form-control message" name="message" id="message" rows="5"></textarea>
-                                </div>
-                                <div class="text-center"><button type="submit">Send Message</button></div>
-                            </form>
-                        </div>
+                            </div>
+                            <div class="form-group">
+                                <input type="text" class="form-control subject" name="subject" id="subject" placeholder="Subject" />
+                            </div>
+                            <div class="form-group">
+                                <textarea class="form-control message" name="message" id="message" rows="5"></textarea>
+                            </div>
+                            <div class="text-center"><button type="submit">Send Message</button></div>
+                        </form>
                     </div>
 
                 </div>
