--- a/index.html
+++ b/index.html
@@ -543,48 +543,38 @@
         <section class=" section contact section-bg" id="contact">
             <div class="h4 text-center mb-4 title mt-4 ">Let's Get In Touch
             </div>
-            <div class="container card mb-5">
-
-                <div class="section-title mt-3" data-aos="fade-in" data-aos-delay="100">
+            <div class="container card pb-4">
+                <div class="section-title mt-3 text-center" data-aos="fade-in" data-aos-delay="100">
                     <p>Convinced to start an interview with us? Send us a message and we'll get back to you as soon as possible!
                     </p>
                 </div>
-
-                <div class="row" data-aos="fade-up" data-aos-delay="100">
-                    <div class="col-lg-6">
-                        <div class="info-box mb-4">
+                <div class="infos row" data-aos="fade-up" data-aos-delay="100">
+                    <div class=" col-lg-6">
+                        <div class="shadow text-center mb-4 pt-3 pb-3">
                             <i class="bx bx-map"></i>
-                            <h3>Our Address</h3>
+                            <h5>Our Address</h5>
                             <p>45, Boulevard Hassan II casablanca</p>
                         </div>
                     </div>
 
-                    <div class="col-lg-3 col-md-6">
-                        <div class="info-box  mb-4">
+                    <div class=" col-lg-3 col-md-6">
+                        <div class="shadow text-center mb-4 pt-3 pb-3">
                             <i class="bx bx-envelope"></i>
-                            <h3>Email Us</h3>
+                            <h5>Email Us</h5>
                             <p>Obayid@company.com</p>
                         </div>
                     </div>
-
-                    <div class="col-lg-3 col-md-6">
-                        <div class="info-box  mb-4">
+                    <div class=" col-lg-3 col-md-6">
+                        <div class="shadow text-center mb-4 pt-3 pb-3">
                             <i class="bx bx-phone-call"></i>
-                            <h3>Call Us</h3>
+                            <h5>Call Us</h5>
                             <p>+212 555 511 111</p>
                         </div>
                     </div>
-
                 </div>
-
-                <div class="row" data-aos="fade-up" data-aos-delay="200">
-
-                    <div class="col-lg-6 ">
-                        <iframe class="mb-4 mb-lg-0" src="https://maps.google.com/maps?q=45,%20Boulevard%20Hassan%20II%20casablanca&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
-                    </div>
-
+                <div class=" row" data-aos="fade-up" data-aos-delay="200">
                     <div class="col-lg-6">
-                        <form action="public/php/mail.php" method="post" role="form">
+                        <form class="shadow col-12 pt-4 pt-4 mb-3" name="contact" action="public/php/mail.php" method="post">
                             <div class="form-row">
                                 <div class="col-md-6 form-group">
                                     <input type="text" name="name" class="form-control name" id="name" placeholder="Your Name" />
@@ -597,10 +587,13 @@
                                 <input type="text" class="form-control subject" name="subject" id="subject" placeholder="Subject" />
                             </div>
                             <div class="form-group">
-                                <textarea class="form-control message" name="message" id="message" rows="5"></textarea>
+                                <textarea class="form-control message" name="message" id="message" rows="7" placeholder="Your Message"></textarea>
                             </div>
                             <div class="text-center"><button type="submit">Send Message</button></div>
                         </form>
+                    </div>
+                    <div class=" col-lg-6 ">
+                        <iframe class="mb-4 mb-lg-0" src="https://maps.google.com/maps?q=45,%20Boulevard%20Hassan%20II%20casablanca&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
                     </div>
 
                 </div>
